[gd_scene load_steps=3 format=3 uid="uid://cinqyp3km0hh4"]

[ext_resource type="Script" path="res://addons/atlas_cutter/atlas_cutter_dock.gd" id="1_nicra"]
[ext_resource type="Script" path="res://addons/atlas_cutter/TextureRect.gd" id="2_d07f8"]

[node name="AtlasCutterDockRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nicra")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4"]
layout_mode = 2
text = "Step 1: Select an image"

[node name="Button2" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer4"]
layout_mode = 2
text = "Select File
"

[node name="Label2" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4"]
layout_mode = 2
text = "Step 2: Select type"

[node name="TabContainer" type="TabContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4"]
layout_mode = 2
current_tab = 1
all_tabs_in_front = true

[node name="Grid" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label4" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid"]
layout_mode = 2
text = "Step 3: Modify values"

[node name="hola" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola"]
layout_mode = 2
alignment = 1

[node name="Size" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer"]
layout_mode = 2
text = "Size"
autowrap_mode = 73

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "W: 
"

[node name="SpinBox" type="SpinBox" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 0.0
allow_greater = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "H: "

[node name="SpinBox2" type="SpinBox" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer/HBoxContainer2"]
layout_mode = 2
max_value = 0.0
allow_greater = true

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola"]
layout_mode = 2
alignment = 1

[node name="Horizontal" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer2"]
layout_mode = 2
text = "Margin
"
autowrap_mode = 73

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "H: "

[node name="SpinBox3" type="SpinBox" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer2/HBoxContainer"]
layout_mode = 2
max_value = 0.0
allow_greater = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "V: "

[node name="SpinBox4" type="SpinBox" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
max_value = 0.0
allow_greater = true

[node name="Label3" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid"]
layout_mode = 2
text = "Step 4: Cut"

[node name="Button" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid"]
layout_mode = 2
disabled = true
text = "CUT!"

[node name="split" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer"]
layout_mode = 2
alignment = 1

[node name="Label6" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split"]
layout_mode = 2
text = "Step 3: Modify values"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split"]
layout_mode = 2
alignment = 1

[node name="PaddingUp" type="SpinBox" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split/VBoxContainer"]
layout_mode = 2

[node name="PaddingLeft" type="SpinBox" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PaddingRight" type="SpinBox" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
alignment = 1

[node name="PaddingBottom" type="SpinBox" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split"]
layout_mode = 2

[node name="Label5" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split"]
layout_mode = 2
text = "Step 4: Cut"

[node name="Button3" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split"]
layout_mode = 2
disabled = true
text = "SPLIT"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/HSplitContainer/VBoxContainer4"]
visible = false
layout_mode = 2

[node name="CenterContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HSplitContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 3
script = ExtResource("2_d07f8")

[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer4/Button2" to="." method="_on_button_2_pressed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer/HBoxContainer2/SpinBox2" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer2/HBoxContainer/SpinBox3" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/hola/VBoxContainer2/HBoxContainer2/SpinBox4" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/Grid/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split/VBoxContainer/PaddingUp" to="." method="_on_padding_value_changed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split/VBoxContainer/HBoxContainer/PaddingLeft" to="." method="_on_padding_value_changed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split/VBoxContainer/HBoxContainer/PaddingRight" to="." method="_on_padding_value_changed"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split/VBoxContainer/PaddingBottom" to="." method="_on_padding_value_changed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer4/TabContainer/split/Button3" to="." method="_on_button_3_pressed"]
